feat: custom page cart

--- a/store/blocks/global/components/minicart/minicart.jsonc
+++ b/store/blocks/global/components/minicart/minicart.jsonc
@@ -1,8 +1,9 @@
 {
   "minicart.v2#desktop__minicart--icon": {
     "props": {
-      "variation": "drawer",
-      // "variation": "link",
+      // "variation": "drawer",
+      "variation": "link",
+      "linkVariationUrl": "/cart",
       "itemcountMode": "total",
       "blockClass": "desktop__minicart--icon"
     },
