--- a/store/blocks/phone/screen/home.jsonc
+++ b/store/blocks/phone/screen/home.jsonc
@@ -22,9 +22,8 @@
     "children": [
       "whatsapp-button",
       "flex-layout.col#phone__home--infocards",
-      "list-context.bullet-group",
       "flex-layout.row#mobile__interesting--title",
-      "flex-layout.row#home__shelf",
+      "flex-layout.row#home__bullets",
       // "flex-layout.col#phone__home--menu",
       "flex-layout.row#mobile__cardstendencies--title",
       "flex-layout.col#home__cards--tendencies",
