feat: custom department search

--- a/store/blocks/desktop/screen/home.jsonc
+++ b/store/blocks/desktop/screen/home.jsonc
@@ -22,6 +22,7 @@
     "children": [
       "whatsapp-button",
       "flex-layout.col#desktop__home--infocards",
+      "department-search",
       "flex-layout.row#desktop__interesting--title",
       "flex-layout.row#home__bullets",
       "flex-layout.row#home__cardstendencies--title",
