--- a/store/blocks/global/components/pages/aboout__us--structure.jsonc
+++ b/store/blocks/global/components/pages/aboout__us--structure.jsonc
@@ -30,6 +30,7 @@
       "flex-layout.row#about__us--spacer",
       "flex-layout.row#about__us--help",
       "flex-layout.row#about__us--spacer"
+      // "pdf-reader"
     ],
     "props": {
       "blockClass": "about__us--container"
