--- a/store/blocks/global/components/pages/about__us--content.jsonc
+++ b/store/blocks/global/components/pages/about__us--content.jsonc
@@ -160,6 +160,14 @@
       "blockClass": "about__help--link",
       "text": "INICIA SESIÓN"
     }
+  },
+
+  "pdf-reader": {
+    "props": {
+      "pdfUrl": "assets/documents/pdf__example.pdf",
+      "width": 500,
+      "height": 800
+    }
   }
 
 }
